final changes for 2017, will comeback to this and improve it once i have learned more skills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 		</section>
 		<section class="about-me" id="about">
-			<div class="col-xs-12 contact-image" style="padding-left:0px;padding-right:0px;">
+			<div class="col-lg-6">
 				<h1 class="text-box name-2">About Me</h1>
 				<div class="awesome-background underline"></div>
 				<ul class="bio-2">
@@ -38,14 +38,16 @@
 					<li>Recent high school graduate</li>
 					<li>Currently enrolled at Geekwise Academy and Fresno city majoring in CIT</li>
 				</ul>
+			</div>
+			<div class="col-xs-12 col-lg-6 contact-image" style="padding-left:0px;padding-right:0px;">
 				<img class="profile-picture" src="img/AndrewWaller.jpg" alt="Profile Picture">
 			</div>
 		</section>
-    <section class="my-work">
-    	<div>
-    		<h1 class="text-box name-3">My Work</h1>
-    		<div class="awesome-background underline"></div>
-    	</div>
+		<section class="my-work">
+			<div>
+				<h1 class="text-box name-3">My Work</h1>
+				<div class="awesome-background underline"></div>
+			</div>
 			<div class="container-fluid external-sites">
 				<div class="flex-parent">
 					<div class="flex-child child-1">
