fixed contact form auto complete specificity

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 					<form class="contact-form" onsubmit="submitForm()" action="https://formspree.io/awalldrew2@gmail.com" name="login" method="post">
 						<label for="name">Name</label>
 						<br>
-						<input type="text" class="input-for-name" name="name" placeholder="John">
-						<input type="text" class="input-for-name" name="name" placeholder="Smith">
+						<input type="text" class="input-for-name" name="first name" placeholder="John">
+						<input type="text" class="input-for-name" name="last name" placeholder="Smith">
 						<br>
 						<label for="email">E-mail</label>
 						<br>
@@ -117,12 +117,12 @@
 						<label for="phoneNumber">Phone Number</label>
 						<br>
 						(
-						<input type="text" class="miniInput" name="phoneNumber" value="" maxlength="3" placeholder="559">
+						<input type="text" class="miniInput" name="area code" value="" maxlength="3" placeholder="559">
 						)
 						-
-						<input type="text" class="miniInput" name="phoneNumber" value="" maxlength="3" placeholder="555">
+						<input type="text" class="miniInput" name="phone number" value="" maxlength="3" placeholder="555">
 						-
-						<input type="text" class="miniInput02" name="phoneNumber" value="" maxlength="4" placeholder="1234">
+						<input type="text" class="miniInput02" name="phone number" value="" maxlength="4" placeholder="1234">
 						<br>
 						<label for="inquiries">Inquiries</label>
 						<br>
